added HTML + CSS

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+:root {
+	--dark-grey: #333;
+	--light-grey: #ddd;
+	--white: #fff;
+	--black: #000;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -13,4 +20,115 @@ body {
 	font-size: 1.6rem;
 	min-height: 100vh;
 	width: 100%;
+	background-color: var(--dark-grey);
+	color: var(--white);
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+}
+
+.container {
+	max-width: 114rem;
+	width: 114rem;
+	margin: 1.6rem;
+	padding: 2.4rem;
+	background-color: var(--white);
+	color: var(--dark-grey);
+	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+	border-radius: 1rem;
+}
+
+.header {
+	padding: 2rem 0;
+	text-align: center;
+	border-bottom: 1px solid var(--dark-grey);
+}
+
+.header__title {
+	font-size: 4rem;
+	margin-bottom: 1.6rem;
+}
+
+.header__inputBox {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+}
+
+.header__input {
+	font-family: inherit;
+	font-size: 1.8rem;
+	padding: 0.8rem 1.6rem;
+	border-radius: 1rem;
+	border: 1px solid var(--dark-grey);
+}
+
+.header__btn {
+	font-family: inherit;
+	font-size: 1.6rem;
+	font-weight: bold;
+	padding: 1rem;
+	border: 1px solid var(--dark-grey);
+	border-radius: 1rem;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.header__btn:hover {
+	background-color: #ccc;
+}
+
+.tasks {
+	padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1.6rem;
+}
+
+.task {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2rem;
+	background-color: #666;
+	color: var(--white);
+	border-radius: 1rem;
+	cursor: pointer;
+}
+
+.task__valueBox {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+}
+
+.task__doneIcon {
+	display: none;
+}
+
+.task__doneIcon,
+.task__undoneIcon {
+	font-size: 2rem;
+}
+
+.task__buttons {
+	display: flex;
+	gap: 0.5rem;
+	margin-left: 2rem;
+}
+
+.task__btn {
+	font-size: 1.6rem;
+	padding: 1rem;
+	background: #fff;
+	border: none;
+	color: var(--dark-grey);
+	border-radius: 1rem;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.task__btn:hover {
+	background-color: #ccc;
 }
