--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,11 @@ body {
 	gap: 1.6rem;
 }
 
+.task__info {
+	font-size: 2rem;
+	text-align: center;
+}
+
 .task {
 	display: flex;
 	align-items: center;
